# ai-assets

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  claude.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.claude/commands/: status-report.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
agents/: team-status-report.md
commands/: daily-status-report.md
docs/: user-guide.md
specs/001-status-report-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-status-report-agent/checklists/: requirements.md
specs/001-status-report-agent/contracts/: cli-contract.md
specs/002-run-history/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-run-history/checklists/: requirements.md
specs/002-run-history/contracts/: cli-contract.md
src/status_report/: __init__.py  agent.py  config.py  main.py  report.py  run_history.py  run_log.py  tracing.py
src/status_report/auth/: google.py  slack.py  tokens.py
src/status_report/mcp/: __init__.py  config.py  executor.py  manager.py  registry.py
src/status_report/skills/: __init__.py  base.py  calendar.py  gdrive.py  github.py  gmail.py  jira.py  slack.py
tests/: conftest.py  test_agent.py  test_config.py  test_mcp_config.py  test_mcp_executor.py  test_mcp_manager.py  test_mcp_registry.py  test_report.py  test_run_history.py  test_run_log.py  test_sources.py
tests/skills/: test_calendar.py  test_gdrive.py  test_github.py  test_gmail.py  test_jira.py  test_slack.py
