[project]
name = "status-report"
version = "0.1.0"
description = "AI-powered daily status report agent aggregating workplace activity"
requires-python = ">=3.12"
dependencies = [
    "anthropic[vertex]>=0.40.0",
    "mcp>=1.0.0",
    "tenacity>=9.0.0",
    "filelock>=3.16.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "google-auth-oauthlib>=1.2.0",
    "playwright>=1.48.0",
]

[project.scripts]
status-report = "status_report.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/status_report"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["status_report"]
